--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ packages = [{include = "brain_games"}]
 python = "^3.10"
 prompt = "^0.4.1"
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
+
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
 
